--- a/src/Component/Navigation/Navigation.style.scss
+++ b/src/Component/Navigation/Navigation.style.scss
@@ -108,10 +108,11 @@ $Background-color--white:#fffdf9;
 }
 @media (max-width:600px){
     .Header{
-        max-width: 90.3%;
+        max-width: 100%;
+        //overflow-x: hidden;
 
         &_Nav{
-            margin-right: 2rem;
+             margin-right: -1rem;
             display: flex;
             
            &_link{
@@ -127,10 +128,11 @@ $Background-color--white:#fffdf9;
         margin-left: 2.5rem;}
         .MobileNav .Header_Nav{
             right: 1rem;
-            background-color: red;
+        
         }
 
 }
+
 
 
   
